--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_enrolment/p_customer_edit_layout/p_customer_edit_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_enrolment/p_customer_edit_layout/p_customer_edit_layout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="customer_edit" >
-			<f_customer_edit [comp_id]="'customer_edit'" [screen_instance]="screen_instance" [hidden]="isHidden('customer_edit','f_customer_edit')" profile_name="p_customer_edit_layout"></f_customer_edit >
+			<f_npss_modify_customer_ui [comp_id]="'customer_edit'" [screen_instance]="screen_instance" [hidden]="isHidden('customer_edit','f_npss_modify_customer_ui')" profile_name="p_customer_edit_layout"></f_npss_modify_customer_ui >
 		</div>
 	</div>
 </div>
