--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_enrolment/p_data_entry_layout/p_data_entry_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_customer_enrolment/p_data_entry_layout/p_data_entry_layout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
 		<div class="data_entry" >
-			<f_data_entry [comp_id]="'data_entry'" [screen_instance]="screen_instance" [hidden]="isHidden('data_entry','f_data_entry')" profile_name="p_data_entry_layout"></f_data_entry >
+			<f_npss_customer_uicg [comp_id]="'data_entry'" [screen_instance]="screen_instance" [hidden]="isHidden('data_entry','f_npss_customer_uicg')" profile_name="p_data_entry_layout"></f_npss_customer_uicg >
 		</div>
 	</div>
 </div>
