--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_enrolment/p_add_cash_list_layout/p_add_cash_list_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_enrolment/p_add_cash_list_layout/p_add_cash_list_layout.component.html
@@ -10,7 +10,7 @@
 	</div>
 	<div id="R21C1R0C2" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
 		<div class="add_desk_ui" >
-			<f_add_desk_ui [comp_id]="'add_desk_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('add_desk_ui','f_add_desk_ui')" profile_name="p_add_cash_list_layout"></f_add_desk_ui >
+			<f_npss_cash_desk_ui [comp_id]="'add_desk_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('add_desk_ui','f_npss_cash_desk_ui')" profile_name="p_add_cash_list_layout"></f_npss_cash_desk_ui >
 		</div>
 	</div>
 </div>
