--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_enrolment/p_bank_layout/p_bank_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_enrolment/p_bank_layout/p_bank_layout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
 		<div class="bank_ui" >
-			<f_bank_ui [comp_id]="'bank_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('bank_ui','f_bank_ui')" profile_name="p_bank_layout"></f_bank_ui >
+			<f_npss_merc_proxy_banks [comp_id]="'bank_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('bank_ui','f_npss_merc_proxy_banks')" profile_name="p_bank_layout"></f_npss_merc_proxy_banks >
 		</div>
 	</div>
 </div>
