--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_enrolment/p_phone_no_layout/p_phone_no_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_enrolment/p_phone_no_layout/p_phone_no_layout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="phone_no_ui" >
-			<f_phone_no_ui [comp_id]="'phone_no_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('phone_no_ui','f_phone_no_ui')" profile_name="p_phone_no_layout"></f_phone_no_ui >
+			<f_npss_phone_no_ui [comp_id]="'phone_no_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('phone_no_ui','f_npss_phone_no_ui')" profile_name="p_phone_no_layout"></f_npss_phone_no_ui >
 		</div>
 	</div>
 </div>
