--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_enrolment/p_shop_layout/p_shop_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_enrolment/p_shop_layout/p_shop_layout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
 		<div class="shop_ui" >
-			<f_shop_ui [comp_id]="'shop_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('shop_ui','f_shop_ui')" profile_name="p_shop_layout"></f_shop_ui >
+			<f_npss_merc_proxy_shop_ui [comp_id]="'shop_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('shop_ui','f_npss_merc_proxy_shop_ui')" profile_name="p_shop_layout"></f_npss_merc_proxy_shop_ui >
 		</div>
 	</div>
 </div>
