--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_salary_verification/f_npss_merch_verify_srch/f_npss_merch_verify_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_salary_verification/f_npss_merch_verify_srch/f_npss_merch_verify_srch.component.html
@@ -13,7 +13,7 @@
 				<txt [ctrl_id]="'npss_merch_verify_srch_cdtr_acct_no'" [comp_id]="comp_id" [ctrl]="ctrl.cdtr_acct_no" [model]="screen_instance[this.comp_id].f_npss_merch_verify_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 	<div  id="RN01CN3" class="column col-md-3 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('cdtr_pmt_type')" >
-				<txt [ctrl_id]="'npss_merch_verify_srch_cdtr_pmt_type'" [comp_id]="comp_id" [ctrl]="ctrl.cdtr_pmt_type" [model]="screen_instance[this.comp_id].f_npss_merch_verify_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cbo [ctrl_id]="'npss_merch_verify_srch_cdtr_pmt_type'" [comp_id]="comp_id" [ctrl]="ctrl.cdtr_pmt_type" [model]="screen_instance[this.comp_id].f_npss_merch_verify_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
 </div>
 <div id="RN11" class="row">
