--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_file_creation/s_merchant_file_creation.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_merchant_file_creation/s_merchant_file_creation.component.html
@@ -1,5 +1,5 @@
 <div class="s_merchant_file_creation">
-<p_npss_layout [screen_instance]="this" [hidden]="!(current_profile=='p_npss_layout')"></p_npss_layout>
+<p_ips_layout [screen_instance]="this" [hidden]="!(current_profile=='p_ips_layout')"></p_ips_layout>
 
 <p-dialog header="{{'Search' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_search_layout__spap_for_nav_search_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '700px','width': '500px'}" [draggable]="true" [modal]="true">
 	<p_search_layout [screen_instance]="this" ></p_search_layout></p-dialog>
