--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_post_view_transactions/f_npss_post_dashboard_srch/f_npss_post_dashboard_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_post_view_transactions/f_npss_post_dashboard_srch/f_npss_post_dashboard_srch.component.html
@@ -9,8 +9,8 @@
 	<div  id="be085ccf-e68e-4297-908e-635dec295851_1666009098411" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('process_type')" >
 				<txt [ctrl_id]="'npss_post_dashboard_srch_process_type'" [comp_id]="comp_id" [ctrl]="ctrl.process_type" [model]="screen_instance[this.comp_id].f_npss_post_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
-	<div  id="c3cdcca8-f318-472d-8f6a-2f8a462f7b94_1666009098411" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('uetr')" >
-				<txt [ctrl_id]="'npss_post_dashboard_srch_uetr'" [comp_id]="comp_id" [ctrl]="ctrl.uetr" [model]="screen_instance[this.comp_id].f_npss_post_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	<div  id="c3cdcca8-f318-472d-8f6a-2f8a462f7b94_1666009098411" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('hdr_msg_id')" >
+				<txt [ctrl_id]="'npss_post_dashboard_srch_hdr_msg_id'" [comp_id]="comp_id" [ctrl]="ctrl.hdr_msg_id" [model]="screen_instance[this.comp_id].f_npss_post_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 </div>
 <div id="r1" class="row">
