--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_hst_view_transactions/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_hst_view_transactions/p_main_layout/p_main_layout.component.html
@@ -14,5 +14,19 @@
 		</div>
 	</div>
 </div>
+<div id="R31" class="row">
+	<div id="R31C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="request_and_response_list"  [hidden]="!screen_instance['request_and_response_list'].show" >
+			<datatable [comp_id]="'request_and_response_list'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
+		</div>
+	</div>
+</div>
+<div id="R41" class="row">
+	<div id="R41C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="process_log_list"  [hidden]="!screen_instance['process_log_list'].show" >
+			<datatable [comp_id]="'process_log_list'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
+		</div>
+	</div>
+</div>
 
 </div>
