--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_post_view_transactions/f_npss_hst_dashboard_srch/f_npss_hst_dashboard_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_post_view_transactions/f_npss_hst_dashboard_srch/f_npss_hst_dashboard_srch.component.html
@@ -12,7 +12,7 @@
 </div>
 <div id="RN41" class="row">
 	<div  id="RN01CN1001" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('process_type')" >
-				<txt [ctrl_id]="'npss_hst_dashboard_srch_process_type'" [comp_id]="comp_id" [ctrl]="ctrl.process_type" [model]="screen_instance[this.comp_id].f_npss_hst_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cbo [ctrl_id]="'npss_hst_dashboard_srch_process_type'" [comp_id]="comp_id" [ctrl]="ctrl.process_type" [model]="screen_instance[this.comp_id].f_npss_hst_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
 	<div  id="RN01CN2" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('hdr_msg_id')" >
 				<txt [ctrl_id]="'npss_hst_dashboard_srch_hdr_msg_id'" [comp_id]="comp_id" [ctrl]="ctrl.hdr_msg_id" [model]="screen_instance[this.comp_id].f_npss_hst_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
