--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_reversal_process/s_reversal_process.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_reversal_process/s_reversal_process.component.html
@@ -1,4 +1,5 @@
 <div class="s_reversal_process">
+<p_refund_layout [screen_instance]="this" [hidden]="!(current_profile=='p_refund_layout')"></p_refund_layout>
 <p_vertical_layout [screen_instance]="this" [hidden]="!(current_profile=='p_vertical_layout')"></p_vertical_layout>
 <p_main_layout [screen_instance]="this" [hidden]="!(current_profile=='p_main_layout')"></p_main_layout>
 
