5961 - changes in cdb

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_reversal_process/f_submit_ui/f_submit_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_reversal_process/f_submit_ui/f_submit_ui.component.html
@@ -2,7 +2,8 @@
 	
 	<div class="row dynamic_action_btn">
 		<btn [ctrl_id]="'submit_ui_back'" [comp_id]="comp_id" [ctrl]="screen_instance.submit_ui_back" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.submit_ui_back.show"></btn>
-		<btn [ctrl_id]="'submit_ui_submit'" [comp_id]="comp_id" [ctrl]="screen_instance.submit_ui_submit" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.submit_ui_submit.show"></btn>
+		<btn [ctrl_id]="'submit_ui_reject'" [comp_id]="comp_id" [ctrl]="screen_instance.submit_ui_reject" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.submit_ui_reject.show"></btn>
+		<btn [ctrl_id]="'submit_ui_accept'" [comp_id]="comp_id" [ctrl]="screen_instance.submit_ui_accept" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.submit_ui_accept.show"></btn>
  	</div>
 
 </div>
