--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_reversal_process/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_reversal_process/f_navigation_ui/f_navigation_ui.component.html
@@ -3,7 +3,7 @@
 	<div class="row dynamic_action_btn">
 		<btn [ctrl_id]="'navigation_ui_search'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_search" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_search.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_detail'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_detail" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_detail.show"></btn>
-		<btn [ctrl_id]="'navigation_ui_reversal'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_reversal" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_reversal.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_refund'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_refund" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_refund.show"></btn>
  	</div>
 
 </div>
