5962 - Power BI screen dev

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_power_bi_dashboard/p_power_dashboard_layout/p_power_dashboard_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_power_bi_dashboard/p_power_dashboard_layout/p_power_dashboard_layout.component.html
@@ -8,7 +8,7 @@
 	</div>
 	<div id="R11C2" class="column col-md-9 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="power_reports_dashboard"  [hidden]="!screen_instance['power_reports_dashboard'].show" >
-			<torus_cs_show_hide [comp_id]="'power_reports_dashboard'" [screen_instance]="screen_instance" profile_name="p_power_dashboard_layout"></torus_cs_show_hide>
+			<torus_cs_power_bi_reports [comp_id]="'power_reports_dashboard'" [screen_instance]="screen_instance" profile_name="p_power_dashboard_layout"></torus_cs_power_bi_reports>
 		</div>
 	</div>
 </div>
