--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_transaction_details/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_transaction_details/f_navigation_ui/f_navigation_ui.component.html
@@ -4,6 +4,8 @@
 		<btn [ctrl_id]="'navigation_ui_search'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_search" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_search.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_detail'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_detail" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_detail.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_refund'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_refund" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_refund.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_retry'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_retry" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_retry.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_already_posted'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_already_posted" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_already_posted.show"></btn>
  	</div>
 
 </div>
