--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/p_main_layout/p_main_layout.component.html
@@ -26,5 +26,12 @@
 		</div>
 	</div>
 </div>
+<div id="R41" class="row">
+	<div id="R41C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="hidden_list"  [hidden]="!screen_instance['hidden_list'].show" >
+			<datatable [comp_id]="'hidden_list'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
+		</div>
+	</div>
+</div>
 
 </div>
