--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/p_view_request_layout/p_view_request_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/p_view_request_layout/p_view_request_layout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="request_ui" >
-			<f_request_ui [comp_id]="'request_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('request_ui','f_request_ui')" profile_name="p_view_request_layout"></f_request_ui >
+			<f_chart_request_ui [comp_id]="'request_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('request_ui','f_chart_request_ui')" profile_name="p_view_request_layout"></f_chart_request_ui >
 		</div>
 	</div>
 </div>
