5993 - chart and rct screen dev

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/s_view_all_transactions.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/s_view_all_transactions.component.html
@@ -11,5 +11,6 @@
 <app-dialog [screen_instance]="this" ></app-dialog>
 <div style="display:none">
 	<datatable [comp_id]="'queue'" [screen_instance]="this"></datatable>
+	<datatable [comp_id]="'hidden_list'" [screen_instance]="this"></datatable>
 </div>
 </div>
