--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/p_main_layout/p_main_layout.component.html
@@ -1,7 +1,7 @@
 <div class="p_main_layout">
  <!-- PROFILE HTML - p_main_layout --> 
 <div id="R11" class="row">
-	<div id="R11C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R11C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="navigation_ui" >
 			<f_navigation_ui [comp_id]="'navigation_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('navigation_ui','f_navigation_ui')" profile_name="p_main_layout"></f_navigation_ui >
 		</div>
@@ -14,23 +14,18 @@
 		</div>
 	</div>
 	<div id="R21C2" class="column col-md-8 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+<div id="R21C2R0" class="row">
+	<div id="R21C2R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="process_log_list"  [hidden]="!screen_instance['process_log_list'].show" >
 			<datatable [comp_id]="'process_log_list'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
 		</div>
 	</div>
-</div>
-<div id="R31" class="row">
-	<div id="R31C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R21C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="transaction_list"  [hidden]="!screen_instance['transaction_list'].show" >
 			<datatable [comp_id]="'transaction_list'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
 		</div>
 	</div>
 </div>
-<div id="R41" class="row">
-	<div id="R41C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="hidden_list"  [hidden]="!screen_instance['hidden_list'].show" >
-			<datatable [comp_id]="'hidden_list'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
-		</div>
 	</div>
 </div>
 
