6060 - APP dev changes

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/p_cash_desk_layout/p_cash_desk_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/p_cash_desk_layout/p_cash_desk_layout.component.html
@@ -1,5 +1,12 @@
 <div class="p_cash_desk_layout">
  <!-- PROFILE HTML - p_cash_desk_layout --> 
+<div id="R31" class="row">
+	<div id="R31C1" class="column col-md-8 col-sm-6 col-xs-6 col-md-offset-4 col-sm-offset-0 col-xs-offset-0" >
+		<div class="navigation" >
+			<f_navigation [comp_id]="'navigation'" [screen_instance]="screen_instance" [hidden]="isHidden('navigation','f_navigation')" profile_name="p_cash_desk_layout"></f_navigation >
+		</div>
+	</div>
+</div>
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="shop_detail"  [hidden]="!screen_instance['shop_detail'].show" >
@@ -23,9 +30,6 @@
 </div>
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0" >
-		<div class="back_ui" >
-			<f_back_ui [comp_id]="'back_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('back_ui','f_back_ui')" profile_name="p_cash_desk_layout"></f_back_ui >
-		</div>
 	</div>
 </div>
 
