--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/p_accept_ui_layout/p_accept_ui_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/p_accept_ui_layout/p_accept_ui_layout.component.html
@@ -16,18 +16,13 @@
 		</div>
 	</div>
 	<div id="R31C1R0C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="comment_list"  [hidden]="!screen_instance['comment_list'].show" >
-			<datatable [comp_id]="'comment_list'" [screen_instance]="screen_instance" profile_name="p_accept_ui_layout"></datatable>
-		</div>
 	</div>
-</div>
-	</div>
-</div>
-<div id="R11" class="row">
-	<div id="R11C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R31C1R0C3" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="reversal_action_ui" >
 			<f_reversal_action_ui [comp_id]="'reversal_action_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('reversal_action_ui','f_reversal_action_ui')" profile_name="p_accept_ui_layout"></f_reversal_action_ui >
 		</div>
+	</div>
+</div>
 	</div>
 </div>
 
