--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/s_rct_reversal.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/s_rct_reversal.component.html
@@ -8,4 +8,7 @@
 <p-dialog header="{{'Change Return Reason' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_change_return_layout__crr_for_spap_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '300px','width': '600px'}" [draggable]="true" [modal]="true">
 	<p_change_return_layout [screen_instance]="this" ></p_change_return_layout></p-dialog>
 <app-dialog [screen_instance]="this" ></app-dialog>
+<div style="display:none">
+	<datatable [comp_id]="'comment_list'" [screen_instance]="this"></datatable>
+</div>
 </div>
