6068 - Back Button for Customer Proxy

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_customer_details/p_view_account_layout/p_view_account_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_customer_details/p_view_account_layout/p_view_account_layout.component.html
@@ -9,6 +9,11 @@
 	<div id="R11C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 <div id="R11C2R0" class="row">
 	<div id="R11C2R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="back_ui" >
+			<f_back_ui [comp_id]="'back_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('back_ui','f_back_ui')" profile_name="p_view_account_layout"></f_back_ui >
+		</div>
+	</div>
+	<div id="R11C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="account_list"  [hidden]="!screen_instance['account_list'].show" >
 			<datatable [comp_id]="'account_list'" [screen_instance]="screen_instance" profile_name="p_view_account_layout"></datatable>
 		</div>
