--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/f_navigation/f_navigation.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/f_navigation/f_navigation.component.html
@@ -2,7 +2,7 @@
 	
 	<div class="row dynamic_action_btn">
 		<btn [ctrl_id]="'navigation_search'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_search" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_search.show"></btn>
-		<btn [ctrl_id]="'navigation_back'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_back" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_back.show"></btn>
+		<btn [ctrl_id]="'navigation_back_to_main'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_back_to_main" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_back_to_main.show"></btn>
 		<btn [ctrl_id]="'navigation_view_account_detail'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_account_detail" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_account_detail.show"></btn>
 		<btn [ctrl_id]="'navigation_view_shop_detail'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_shop_detail" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_shop_detail.show"></btn>
 		<btn [ctrl_id]="'navigation_view_cash_desk_detail'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_cash_desk_detail" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_cash_desk_detail.show"></btn>
