--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/f_navigation_ui/f_navigation_ui.component.html
@@ -9,6 +9,7 @@
 		<btn [ctrl_id]="'navigation_ui_view_response'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_response" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_response.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_request'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_request" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_request.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_log_history'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_log_history" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_log_history.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_reset'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_reset" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_reset.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_trgr_disable_btn'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_trgr_disable_btn" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_trgr_disable_btn.show"></btn>
  	</div>
 
