--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_transactions/p_main_layout/p_main_layout.component.html
@@ -11,13 +11,13 @@
 	<div id="R21C1" class="column col-md-4 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 <div id="R21C1R0" class="row">
 	<div id="R21C1R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="chart"  [hidden]="!screen_instance['chart'].show" >
-			<chart [comp_id]="'chart'" [screen_instance]="screen_instance" profile_name="p_main_layout"></chart>
+		<div class="group_by_status"  [hidden]="!screen_instance['group_by_status'].show" >
+			<chart [comp_id]="'group_by_status'" [screen_instance]="screen_instance" profile_name="p_main_layout"></chart>
 		</div>
 	</div>
 	<div id="R21C1R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="bar_chart"  [hidden]="!screen_instance['bar_chart'].show" >
-			<chart [comp_id]="'bar_chart'" [screen_instance]="screen_instance" profile_name="p_main_layout"></chart>
+		<div class="group_by_processing_system"  [hidden]="!screen_instance['group_by_processing_system'].show" >
+			<chart [comp_id]="'group_by_processing_system'" [screen_instance]="screen_instance" profile_name="p_main_layout"></chart>
 		</div>
 	</div>
 </div>
