6132 - screen changes update

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_customer_details/f_npss_sm_cust_details_srch/f_npss_sm_cust_details_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_customer_details/f_npss_sm_cust_details_srch/f_npss_sm_cust_details_srch.component.html
@@ -19,11 +19,8 @@
 	</div>
 </div>
 <div id="RN21" class="row">
-	<div  id="RN21CN5" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_id')" >
-				<txt [ctrl_id]="'npss_sm_cust_details_srch_channel_id'" [comp_id]="comp_id" [ctrl]="ctrl.channel_id" [model]="screen_instance[this.comp_id].f_npss_sm_cust_details_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
-	</div>
-	<div  id="RN21CN6" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_product')" >
-				<txt [ctrl_id]="'npss_sm_cust_details_srch_channel_product'" [comp_id]="comp_id" [ctrl]="ctrl.channel_product" [model]="screen_instance[this.comp_id].f_npss_sm_cust_details_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	<div  id="RN21CN5" class="column col-md-12 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory19')" >
+				<cdn_date [ctrl_id]="'npss_sm_cust_details_srch_memory19'" [comp_id]="comp_id" [ctrl]="ctrl.memory19" [model]="screen_instance[this.comp_id].f_npss_sm_cust_details_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
 	</div>
 </div>
 	</form>
