--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/f_npss_sm_merchant_details_srch/f_npss_sm_merchant_details_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/f_npss_sm_merchant_details_srch/f_npss_sm_merchant_details_srch.component.html
@@ -26,6 +26,11 @@
 				<txt [ctrl_id]="'npss_sm_merchant_details_srch_denomination'" [comp_id]="comp_id" [ctrl]="ctrl.denomination" [model]="screen_instance[this.comp_id].f_npss_sm_merchant_details_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 </div>
+<div id="RN41" class="row">
+	<div  id="RN41CN8" class="column col-md-12 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory26')" >
+				<cdn_date [ctrl_id]="'npss_sm_merchant_details_srch_memory26'" [comp_id]="comp_id" [ctrl]="ctrl.memory26" [model]="screen_instance[this.comp_id].f_npss_sm_merchant_details_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
+	</div>
+</div>
 <div id="RN31" class="row">
 	<div  id="RN31CN7" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('vat_number')" >
 				<txt [ctrl_id]="'npss_sm_merchant_details_srch_vat_number'" [comp_id]="comp_id" [ctrl]="ctrl.vat_number" [model]="screen_instance[this.comp_id].f_npss_sm_merchant_details_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
