--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_posting_suspicious/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_posting_suspicious/f_navigation_ui/f_navigation_ui.component.html
@@ -5,6 +5,8 @@
 		<btn [ctrl_id]="'navigation_ui_call_enquiry'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_call_enquiry" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_call_enquiry.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_call_t24_posting'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_call_t24_posting" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_call_t24_posting.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_call_cc_posting'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_call_cc_posting" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_call_cc_posting.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_retry'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_retry" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_retry.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_already_post'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_already_post" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_already_post.show"></btn>
  	</div>
 
 </div>
