--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_iban_transaction_details/p_vertical_layout/p_vertical_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_iban_transaction_details/p_vertical_layout/p_vertical_layout.component.html
@@ -9,8 +9,8 @@
 </div>
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-5 col-sm-6 col-xs-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0" >
-		<div class="back_ui" >
-			<f_back_ui [comp_id]="'back_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('back_ui','f_back_ui')" profile_name="p_vertical_layout"></f_back_ui >
+		<div class="main_back_ui" >
+			<f_main_back_ui [comp_id]="'main_back_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('main_back_ui','f_main_back_ui')" profile_name="p_vertical_layout"></f_main_back_ui >
 		</div>
 	</div>
 </div>
