--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_iban_transaction_details/p_view_history_layout/p_view_history_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_iban_transaction_details/p_view_history_layout/p_view_history_layout.component.html
@@ -9,8 +9,8 @@
 </div>
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-5 col-sm-6 col-xs-6 col-md-offset-7 col-sm-offset-0 col-xs-offset-0" >
-		<div class="back_ui" >
-			<f_back_ui [comp_id]="'back_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('back_ui','f_back_ui')" profile_name="p_view_history_layout"></f_back_ui >
+		<div class="hst_process_log_to_main_back" >
+			<f_hst_process_log_to_main_back [comp_id]="'hst_process_log_to_main_back'" [screen_instance]="screen_instance" [hidden]="isHidden('hst_process_log_to_main_back','f_hst_process_log_to_main_back')" profile_name="p_view_history_layout"></f_hst_process_log_to_main_back >
 		</div>
 	</div>
 </div>
