--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_iban_transaction_details/p_view_request_layout/p_view_request_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_iban_transaction_details/p_view_request_layout/p_view_request_layout.component.html
@@ -7,5 +7,19 @@
 		</div>
 	</div>
 </div>
+<div id="R21" class="row">
+	<div id="R21C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0" >
+		<div class="main_back_ui" >
+			<f_main_back_ui [comp_id]="'main_back_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('main_back_ui','f_main_back_ui')" profile_name="p_view_request_layout"></f_main_back_ui >
+		</div>
+	</div>
+</div>
+<div id="R31" class="row">
+	<div id="R31C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-6 col-sm-offset-0 col-xs-offset-0" >
+		<div class="hst_process_log_back" >
+			<f_hst_process_log_back [comp_id]="'hst_process_log_back'" [screen_instance]="screen_instance" [hidden]="isHidden('hst_process_log_back','f_hst_process_log_back')" profile_name="p_view_request_layout"></f_hst_process_log_back >
+		</div>
+	</div>
+</div>
 
 </div>
