--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_summary/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_summary/f_navigation_ui/f_navigation_ui.component.html
@@ -4,6 +4,7 @@
 		<btn [ctrl_id]="'navigation_ui_search'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_search" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_search.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_detail'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_detail" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_detail.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_view_log_history'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_view_log_history" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_view_log_history.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_reset'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_reset" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_reset.show"></btn>
  	</div>
 
 </div>
