--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/p_mainlayout/p_mainlayout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/p_mainlayout/p_mainlayout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="data_entry" >
-			<f_npss_rct_simulator_ui [comp_id]="'data_entry'" [screen_instance]="screen_instance" [hidden]="isHidden('data_entry','f_npss_rct_simulator_ui')" profile_name="p_mainlayout"></f_npss_rct_simulator_ui >
+			<f_data_entry [comp_id]="'data_entry'" [screen_instance]="screen_instance" [hidden]="isHidden('data_entry','f_data_entry')" profile_name="p_mainlayout"></f_data_entry >
 		</div>
 	</div>
 </div>
