--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/s_rct_simulator.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/s_rct_simulator.component.html
@@ -2,4 +2,7 @@
 <p_mainlayout [screen_instance]="this" [hidden]="!(current_profile=='p_mainlayout')"></p_mainlayout>
 <p_list_layout [screen_instance]="this" [hidden]="!(current_profile=='p_list_layout')"></p_list_layout>
 <app-dialog [screen_instance]="this" ></app-dialog>
+<div style="display:none">
+	<f_triger_ui [comp_id]="'triger_ui'" [screen_instance]="this" ></f_triger_ui >
+</div>
 </div>
