--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/p_mainlayout/p_mainlayout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/p_mainlayout/p_mainlayout.component.html
@@ -14,5 +14,12 @@
 		</div>
 	</div>
 </div>
+<div id="R31" class="row">
+	<div id="R31C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="npss_sim_pack008"  [hidden]="!screen_instance['npss_sim_pack008'].show" >
+			<npss_cs_sim_pack_008 [comp_id]="'npss_sim_pack008'" [screen_instance]="screen_instance" profile_name="p_mainlayout"></npss_cs_sim_pack_008>
+		</div>
+	</div>
+</div>
 
 </div>
