--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/p_mainlayout/p_mainlayout.component.css
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/p_mainlayout/p_mainlayout.component.css
@@ -1,2 +1,14 @@
 /* CSS */
+:host ::ng-deep .data_entry #npss_simulator_ui_channel_information label{font-size:15px}
+:host ::ng-deep .data_entry #npss_simulator_ui_channel_information label:nth-child(3){color:black}
+:host ::ng-deep .data_entry #npss_simulator_ui_channel_information label{font-weight:bold;font-size:15px}
+:host ::ng-deep .data_entry #npss_simulator_ui_channel_information label:nth-child(3){color:black}
+:host ::ng-deep .data_entry #npss_simulator_ui_sender_information label{font-size:15px}
+:host ::ng-deep .data_entry #npss_simulator_ui_sender_information label:nth-child(3){color:black}
+:host ::ng-deep .data_entry #npss_simulator_ui_sender_information label{font-weight:bold;font-size:15px}
+:host ::ng-deep .data_entry #npss_simulator_ui_sender_information label:nth-child(3){color:black}
+:host ::ng-deep .data_entry #npss_simulator_ui_other label{font-size:15px}
+:host ::ng-deep .data_entry #npss_simulator_ui_other label:nth-child(3){color:black}
+:host ::ng-deep .data_entry #npss_simulator_ui_other label{font-weight:bold;font-size:15px}
+:host ::ng-deep .data_entry #npss_simulator_ui_other label:nth-child(3){color:black}
 :host ::ng-deep .navigation_ui .row.dynamic_action_btn .btn { float: right; }
