--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_process_logs/s_view_process_logs.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_process_logs/s_view_process_logs.component.html
@@ -1,4 +1,5 @@
 <div class="s_view_process_logs">
+<p_show_table_view_profile [screen_instance]="this" [hidden]="!(current_profile=='p_show_table_view_profile')"></p_show_table_view_profile>
 <p_view_main_req_and_res_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_main_req_and_res_layout')"></p_view_main_req_and_res_layout>
 <p_view_response_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_response_layout')"></p_view_response_layout>
 <p_view_request_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_request_layout')"></p_view_request_layout>
