--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_simulator/f_navigation_ui/f_navigation_ui.component.html
@@ -1,6 +1,7 @@
 <div class="">
 	
 	<div class="row dynamic_action_btn">
+		<btn [ctrl_id]="'navigation_ui_back'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_back" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_back.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_create_pacs008'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_create_pacs008" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_create_pacs008.show"></btn>
  	</div>
 
