--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_process_logs/p_show_table_view_profile/p_show_table_view_profile.component.css
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_process_logs/p_show_table_view_profile/p_show_table_view_profile.component.css
@@ -1,2 +1,2 @@
 /* CSS */
-:host ::ng-deep .payment_srch .row.dynamic_action_btn .btn { float: right; }
+:host ::ng-deep .payment_action .row.dynamic_action_btn .btn {margin-top: 4rem}
