--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_process_logs/p_search_layout/p_search_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_process_logs/p_search_layout/p_search_layout.component.html
@@ -3,7 +3,7 @@
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="search" >
-			<f_npss_api_plog_srch [comp_id]="'search'" [screen_instance]="screen_instance" [hidden]="isHidden('search','f_npss_api_plog_srch')" profile_name="p_search_layout"></f_npss_api_plog_srch >
+			<f_search [comp_id]="'search'" [screen_instance]="screen_instance" [hidden]="isHidden('search','f_search')" profile_name="p_search_layout"></f_search >
 		</div>
 	</div>
 </div>
