6435 - table view ide changes

--- a/frontend/wp_ng9/custom_widget/npss_cs_show_table_view/npss_cs_show_table_view.component.html
+++ b/frontend/wp_ng9/custom_widget/npss_cs_show_table_view/npss_cs_show_table_view.component.html
@@ -1,5 +1,5 @@
 <!--HTML FILE-->
-<div class = "tablestyle">
+<div class = "tablestyle" *ngIf = "showtable">
 <p-table [columns]="tableheader" [value]="tablerows" [tableStyle]="{'min-width': '50rem'}">
     <ng-template pTemplate="header" let-columns>
         <tr>
